--- a/blog-4.html
+++ b/blog-4.html
@@ -148,151 +148,205 @@
           <!-- Blog Detail Start -->
           <div class="mb-5">
             <h1 class="text-uppercase mb-3">
-              The Essence of 
+              The Essence of
               <span class="text-primary">Nepali Architecture</span>
             </h1>
             <p>
-              In order to ensure that the project is in line with your financial
-              capabilities and expectations, it is necessary to carefully plan
-              and budget for the construction of a house in Nepal. The cost of
-              building can vary greatly based on a number of factors, such as
-              the location, the design, the materials, and the labour. In order
-              to assist you in developing an efficient budget for the
-              construction of a house in Nepal, here is a thorough guide.
+              The architecture of Nepal is a magnificent manifestation of its
+              abundant cultural legacy, profound spirituality, and formidable
+              geographical obstacles. Situated in the Himalayas, the
+              architectural framework of the country is a dynamic mosaic
+              interwoven with age-old customs, creative manifestations, and
+              pragmatic adjustments. The fundamental nature of Nepali
+              architecture resides in its capacity to harmonise the aspects of
+              form, function, and philosophy, therefore producing buildings that
+              possess both aesthetic appeal and durability.
             </p>
             <h4 class="text-uppercase mb-3 text-primary">
-              1. Recognising the Most Important Cost Factors
+              1. Integration with Nature
             </h4>
             <p>
-              It is vital to have a solid understanding of the fundamental
-              aspects that determine construction costs before delving into the
-              minutiae of budgeting. These components are as follows:
+              Many Nepali architectural designs demonstrate a profound reverence
+              for the natural environment. Traditional structures are
+              intricately planned to seamlessly integrate with the surrounding
+              environment, considering the specific climatic conditions and
+              geographical features of the area.
             </p>
-            <ul>
-              <p><i class="fa fa-check text-primary me-3"></i>Location</p>
-              <p>
-                There is a potential for considerable price disparities between
-                urban and rural areas. For example, the cost of construction in
-                Kathmandu and other major cities is typically more than the cost
-                of construction in rural areas because of the higher cost of
-                labour and additional materials.
-              </p>
-              <p>
-                <i class="fa fa-check text-primary me-3"></i>Design and Size
-              </p>
-              <p>
-                The degree of difficulty of the design and the dimensions of the
-                house will both have an effect on the total cost. Generally
-                speaking, the cost of custom and elaborate designs is more.
-              </p>
-              <p><i class="fa fa-check text-primary me-3"></i>Materials</p>
-              <p>
-                The cost is impacted by the construction materials that are
-                selected, such as bricks, concrete, or wood. Materials that are
-                imported or of a high quality will result in increased costs.
-              </p>
-              <p><i class="fa fa-check text-primary me-3"></i>Labor</p>
-              <p>
-                Costs of skilled labour fluctuate, with seasoned workers
-                demanding greater salaries. Labour expenses are also influenced
-                by the geographical location of the project.
-              </p>
-              <p>
-                <i class="fa fa-check text-primary me-3"></i>Regulations and
-                Perits
-              </p>
-              <p>
-                Adhering to relevant local building regulations and acquiring
-                required permits can increase the overall expenses.
-              </p>
-            </ul>
+            <p>
+              Traditional Newari dwellings in the Kathmandu Valley are built
+              with robust brick walls and wooden windows to provide insulation
+              against both heat and cold, therefore facilitating climate
+              adaptation. Pagoda-style temples feature multi-tiered roofs
+              specifically engineered to efficiently drain heavy monsoon
+              rainfall.
+            </p>
+            <p>
+              Natural Materials: Builders often use regionally obtained
+              materials such as stone, timber, and clay. These resources are not
+              only easily accessible but also highly compatible with the
+              specific climatic and geological patterns of the region.
+            </p>
             <h4 class="text-uppercase mb-3 text-primary">
-              2. Estimating Costs Per Square Foot
+              2. Spiritual and Symbolic Dimensions
             </h4>
             <p>
-              Quantifying the cost per square foot is a widely used method for
-              estimating building expenses. The typical cost of construction in
-              Nepal might vary between NPR 2,500 and NPR 5,000 per square foot,
-              contingent upon the aforementioned criteria.
+              The architectural traditions of Nepal are intricately connected to
+              religious and spiritual convictions. Architectural forms are
+              frequently crafted to embody cosmological concepts and spiritual
+              meaning.
             </p>
-
             <p>
-              The Basis: NPR 2,500 - NPR 3,000 per square foot Construction
-              Standard: NPR 3,000 - NPR 4,000 per square foot Premium
-              Construction: NPR 4,000 - NPR 5,000 and beyond per square foot.
+              Pagoda Style: The renowned pagoda design, characterised by its
+              tiers of roofs and elaborate carvings, represents Mount Meru, the
+              focal point of the cosmos in Hindu and Buddhist cosmology. This
+              architectural structure symbolises the sacred axis that links the
+              physical world with the realm of the divine.
+            </p>
+            <p>
+              Sacred Geometry: The arrangement and architectural structure of
+              numerous temples and stupas integrate sacred geometric patterns,
+              which mirror the profound spiritual importance of spatial
+              integration and balance.
             </p>
 
             <img
               class="img-fluid w-100 rounded mb-5"
-              src="img/blog/blog-3.webp"
+              src="img/blog/b-1.webp"
               alt=""
             />
             <h4 class="text-uppercase mb-3 text-primary">
               3. Detailed Budget Breakdown
             </h4>
             <p>
-              To get a more accurate estimate, consider breaking down the budget
-              into the following categories:
+              Elaborate wood carvings and ornamental features are essential
+              components of Nepali architecture, especially in the Kathmandu
+              Valley. In addition to their decorative purpose, these carvings
+              also convey mythological narratives and cultural ideals.
             </p>
-            <h5 class="text-uppercase mb-3 text-primary">A. Land Costs</h5>
+            <h5 class="text-uppercase mb-3 text-primary">A. Newari Woodwork</h5>
             <p>
-              The cost of buying land varies greatly based on location and size.
-              It should isncludes registration and legal documentation costs.
+              Newari houses of the traditional style showcase ornate wooden
+              windows, doors, and balconies embellished with detailed carvings
+              of gods, floral designs, and geometric patterns. These sculptures
+              exemplify the expertise and creativity of artisans from Newar.
             </p>
+            <h5 class="text-uppercase mb-3 text-primary">
+              B. Temple Decorations
+            </h5>
+            <p>
+              In many cases, temples and stupas are adorned with intricate
+              sculptures and frescoes that portray religious stories, hence
+              enhancing the visual and spiritual opulence of the monumental
+              features.
+            </p>
+
             <h4 class="text-uppercase mb-3 text-primary">
-              B. Design and Planning
+              4. Resilience and Adaptability
             </h4>
             <p>
-              Architect/Designer Fees: Typically 5% - 10% of the total
-              construction cost.
+              Nepal's architecture is distinguished by its robustness and
+              adaptability, which can be attributed to the country's seismic
+              activity and varied topography. Conventional construction
+              techniques have developed to endure seismic activity and severe
+              weather extremes.
             </p>
             <p>
-              Engineering Fees: For structural and civil engineering, usually 2%
-              - 5% of the total cost.
+              Traditional structures generally employ earthquake-resistant
+              designs characterised by thick walls, hefty wooden beams, and
+              flexible joinery to improve structural stability. Contemporary
+              architects persist in integrating these ideas in conjunction with
+              advancing earthquake-resistant technologies.
             </p>
+            <p>
+              Traditional residences frequently incorporate central courtyards
+              that function as common areas, therefore exemplifying the
+              significance of social engagement and communal existence.
+              Furthermore, these courtyards offer ample natural light and
+              ventilation, therefore augmenting the habitability of the
+              residences.
+            </p>
+
             <h4 class="text-uppercase mb-3 text-primary">
-              C. Construction Costs
+              5. Cultural and Historical Significance
             </h4>
             <p>
-              Foundation: Costs for excavation, concrete, and reinforcement.
+              Nepali architecture serves as a constantly evolving documentation
+              of the cultural and historical development of the country. Every
+              architectural style and building type narrates of distinct
+              historical periods, influences, and societal transformations.
             </p>
-            <p>Structure: Costs for walls, floors, and roof construction.</p>
             <p>
-              Finishes: Includes plastering, painting, tiling, and flooring.
+              Three of the Durbar Squares in the Kathmandu Valley, namely
+              Kathmandu, Patan, and Bhaktapur, are designated as UNESCO World
+              Heritage Sites that magnificently display the architectural
+              achievements of the Malla era. Their reflection is of the
+              political, social, and cultural accomplishments of that era.
             </p>
 
             <p>
-              Fixtures: Costs for electrical fixtures, plumbing, and hardware.
+              The integration of Hindu and Buddhist architectural styles,
+              observed in temples and stupas, demonstrates the vibrant religious
+              legacy and cultural amalgamation of the region.
             </p>
-            <h4 class="text-uppercase mb-3 text-primary">D. Labor Costs</h4>
-            <p>
-              Skilled Workers: Includes masons, carpenters, electricians, and
-              plumbers.
-            </p>
-            <p>Unskilled Workers: Includes general laborers.</p>
-            <h4 class="text-uppercase mb-3 text-primary">E. Materials</h4>
-            <p>Structural Materials: Bricks, cement, steel, etc.</p>
-            <p>Finishing Materials: Tiles, paint, fixtures, etc.</p>
+
             <h4 class="text-uppercase mb-3 text-primary">
-              F. Miscellaneous Costs
+              6. Sustainable Practices
             </h4>
-            <p>Permits and Fees: Building permits, utility connection fees.</p>
             <p>
-              Contingency Fund: Typically 10% of the total budget for unexpected
-              expenses.
+              Sustainable practices are a fundamental element of traditional
+              Nepali architecture. Buildings are specifically engineered to
+              reduce their ecological footprint and optimise resource
+              utilisation.
+            </p>
+            <p>
+              Natural light and ventilation are strategically incorporated into
+              the design of traditional dwellings to maximise energy efficiency,
+              therefore minimising the need on artificial lighting and heating.
+              Employing strong walls and strategically positioning windows aids
+              in the regulation of indoor temperatures.
+            </p>
+            <p>
+              Resources Utilised: The use of local resources and traditional
+              construction methods helps to promote sustainable building
+              practices, therefore decreasing the carbon emissions linked to
+              transportation and manufacturing.
+            </p>
+
+            <h4 class="text-uppercase mb-3 text-primary">
+              7. Modern Adaptations
+            </h4>
+            <p>
+              The integration of ancient architectural ideas with modern
+              technologies and designs is observed in contemporary Nepal. This
+              fusion of traditional and contemporary elements guarantees the
+              ongoing development of Nepali architecture while guarding its
+              fundamental nature.
+            </p>
+            <p>
+              Contemporary Designs: Contemporary architects in Nepal are
+              integrating traditional features into their designs, therefore
+              constructing buildings that effectively honour cultural history
+              while yet meeting contemporary requirements.
+            </p>
+            <p>
+              Environmental technologies, like solar panels, rainwater
+              harvesting systems, and eco-friendly materials, are being
+              implemented to improve the sustainability of new buildings.
             </p>
 
             <h4 class="text-uppercase mb-3 text-primary">Conclusion</h4>
             <p>
-              Constructing a residence in Nepal necessitates meticulous
-              financial calculations and strategic preparation to guarantee that
-              the undertaking aligns with your desired outcomes and financial
-              limitations. In order to efficiently oversee your building
-              project, it is essential to comprehend the primary cost elements,
-              make estimations of expenses per square foot, and meticulously
-              categorise the budget. By using meticulous planning and effective
-              financial management, it is possible to transform your ideal home
-              into a tangible achievement within your budget.
+              Nepali architecture is fundamentally rooted in its deep
+              interrelation with environment, spirituality, and cultural legacy.
+              It exemplifies a harmonious equilibrium among visual appeal,
+              practicality, and durability, mirroring the principles and customs
+              of the Nepalese population. Nepali architecture showcases a
+              diverse range of historical, artistic, and innovative elements,
+              shown in the elaborate wood carvings of traditional houses and the
+              symbolic magnificence of pagodas and stupas. Nepal's architectural
+              heritage stands as a tribute to its perennial cultural identity
+              and creative spirit as the country continues to develop and
+              modernise.
             </p>
           </div>
           <!-- Blog Detail End -->
