--- a/blog.html
+++ b/blog.html
@@ -250,7 +250,7 @@
                             </div>
                         </div>
                         <h4 class="text-uppercase mb-3">The Resilience of <span class="text-primary"> Bhaktapur’s Architecture</span></h4>
-                        <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold" href="blog-5.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -268,7 +268,7 @@
                             </div>
                         </div>
                         <h4 class="text-uppercase mb-3">Traditional Newari Houses: <span class="text-primary"> A Model of Sustainability</span></h4>
-                        <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold" href="blog-6.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
