--- a/blog-6.html
+++ b/blog-6.html
@@ -148,75 +148,96 @@
           <!-- Blog Detail Start -->
           <div class="mb-5">
             <h1 class="text-uppercase mb-3">
-                Traditional Newari Houses:
+              Traditional Newari Houses:
               <span class="text-primary">A Model of Sustainability</span>
             </h1>
             <p>
-              Bhaktapur, a historic city located in the Kathmandu Valley, is
-              widely recognised for its abundant cultural legacy and impressive
-              architectural achievements. Distinguished by its impeccably
-              maintained temples, palaces, and courtyards, the architecture of
-              Bhaktapur serves as a remarkable demonstration of the
-              resourcefulness and tenacity of the Newar people. Considering the
-              city's susceptibility to natural calamities, namely earthquakes,
-              its resilience is especially remarkable. It is imperative to
-              examine the fundamental elements that contribute to the robustness
-              of Bhaktapur's architecture.
+              The traditional Newari dwellings, predominantly located in the
+              Kathmandu Valley of Nepal, display an exceptional illustration of
+              sustainable building. Grounded in long-standing traditions, these
+              residences not only provide as evidence of the Newar community's
+              abundant cultural legacy but also exemplify environmentally
+              friendly and resource-efficient architectural principles. The
+              traditional Newari dwellings serve as a prime example of
+              sustainability.
             </p>
             <h4 class="text-uppercase mb-3 text-primary">
-              1. Traditional Building Techniques
+              1. Use of Local and Natural Materials
             </h4>
             <p>
-              The traditional architecture of Bhaktapur incorporates methods
-              that improve the structural stability and durability of buildings
-              against earthquakes. Structures frequently incorporate robust
-              brick walls, hardwood beams, and adaptable joinery to effectively
-              absorb and disperse seismic shocks.
+              Earth-Friendly Materials: Construction of traditional Newari
+              dwellings involves the use of locally sourced materials, including
+              brick, lumber, and clay. The selection of these materials is based
+              on their minimal ecological footprint and appropriateness for the
+              present climatic conditions.
             </p>
             <p>
-              The utilisation of locally manufactured materials, such as clay
-              bricks and lumber, not only ensures environmental sustainability
-              but also enhances the longevity of the buildings. Conventional
-              brick-making techniques yield bricks with a substantial thermal
-              mass, enabling them to endure external compressive forces and
-              fluctuations in temperature.
+              Clay Bricks: Newari architecture utilises bricks crafted from
+              locally obtained clay, a plentiful and sustainable resource. The
+              conventional technique of brick production entails subjecting the
+              bricks to high temperatures in kilns, which, whilst being
+              energy-intensive, utilises local resources and reduces emissions
+              created during transit.
+            </p>
+            <p>
+              Wood: Timber finds widespread application in structural components
+              such as beams and columns, as well as in ornamental purposes.
+              Utilising locally sourced timber minimises the carbon emissions
+              linked to material transportation, as wood is a renewable
+              resource.
             </p>
 
             <h4 class="text-uppercase mb-3 text-primary">
-              2. Architectural Features
+              2. Climate-Responsive Design
             </h4>
             <p>
-              Pagoda Style: The pagoda-style temples of Bhaktapur, distinguished
-              by their tiers of roofs, are specifically engineered to endure
-              significant seismic events. By enabling the structure to flex and
-              absorb shock, the overhanging eaves of the pagoda roofs mitigate
-              the effects of earthquakes.
+              Thermal Regulation: Newari buildings are meticulously customised
+              to suit the specific climatic conditions of the region.
+              Substantial brick walls and lofty timber ceilings effectively
+              control indoor temperatures by offering insulation against both
+              high and low temperatures. The implementation of this passive
+              design strategy minimises the requirement for artificial heating
+              and cooling.
             </p>
             <p>
-              Central Courtyards: Main courtyards in traditional Newari
-              dwellings generally function as social areas. These courtyards
-              facilitate the ingress of natural light and airflow, therefore
-              promoting a more uniform distribution of the building's loading.
-              Moreover, courtyards would serve as effective shock absorbers in
-              the event of an earthquake.
+              Ventilation and Light: Traditional architectural designs
+              incorporate well positioned windows and spacious courtyards to
+              optimise the utilisation of natural light and airflow. The primary
+              function of the centre courtyard is to facilitate social
+              activities and enhance air circulation, therefore decreasing the
+              need for artificial lighting and ventilation equipment.
             </p>
             <p>
-              Wooden Bracing: Traditional Newari building incorporates elaborate
-              timber bracing that serves to both improve its visual
-              attractiveness and provide structural reinforcement. The flexural
-              and shock-absorbing properties of these wooden components mitigate
-              the likelihood of collapse during seismic events.
+              Roof Design: The steep, multi-level roofs of traditional Newari
+              dwellings are specifically engineered to efficiently deal with
+              intense monsoon rainfall. The projecting eaves also offer shelter,
+              therefore assisting in maintaining the lower temperatures of the
+              interiors throughout the scorching summer season.
             </p>
             <h4 class="text-uppercase mb-3 text-primary">
-              3. Post-Earthquake Reconstruction
+              3. Resource Efficiency
             </h4>
             <p>
-              Resilient restoration practices were implemented in Bhaktapur
-              following the catastrophic earthquakes of 2015, which
-              significantly damaged its historic buildings. The restoration
-              efforts have mostly concentrated on integrating conventional
-              building methods with contemporary engineering principles to
-              reconstruct and strengthen impaired structures.
+              Water Management: A significant number of traditional Newari
+              dwellings are equipped with highly effective water management
+              systems. Conventional wells and rainfall harvesting systems are
+              employed for the purpose of gathering and retaining water for
+              household consumption. Consequently, this diminishes dependence on
+              external water supplies and fosters self-reliance.
+            </p>
+            <p>
+              Waste Management: Newari dwellings frequently incorporate
+              designated areas for the composting of organic waste. The compost
+              generated can be utilised to enhance soil fertility for gardening,
+              therefore establishing a self-contained system that conserves
+              resources and promotes sustainable agriculture.
+            </p>
+            <p>
+              Material longevity: The materials used in Newari homes are
+              selected based on their robustness. When adequately maintained,
+              brick and timber have the potential to endure for many decades.
+              Such durability minimises the necessity for frequent maintenance
+              or replacements, therefore preserving resources in the long run.
             </p>
             <p>
               Community Involvement: The restoration work in Bhaktapur has
@@ -233,82 +254,64 @@
               alt=""
             />
             <h4 class="text-uppercase mb-3 text-primary">
-              4. Cultural and Historical Significance
+              4. Social and Cultural Sustainability
             </h4>
             <p>
-              Bhaktapur's resilience extends beyond its physical durability to
-              encompass the essential task of safeguarding its cultural
-              heritage. The architectural design of the city is intricately
-              connected to its cultural and religious customs, thereby
-              guaranteeing the conservation of its structures as a top priority
-              in order to retain its historical character.
+              Community Integration: Traditional Newari dwellings are
+              specifically built to promote and facilitate social engagement
+              within the community. In order to strengthen community links and
+              cultural traditions, the central courtyards and common areas
+              promote social cohesion and collaborative activities.
             </p>
             <p>
-              The classification of Bhaktapur as a UNESCO World Heritage Site
-              underscores its worldwide relevance and the need of safeguarding
-              its architectural heritage. Therefore, international efforts to
-              preserve and restore the historic buildings of Bhaktapur
-              contribute to the durability of its architecture.
+              Architectural Heritage: The conservation of traditional
+              architectural styles and construction techniques enhances the
+              cultural sustainability of the Newar community by safeguarding its
+              architectural heritage. Through the preservation of these customs,
+              the community safeguards its historical character and transmits
+              its architectural legacy to succeeding generations.
+            </p>
+            <p>
+              Adaptability: Traditional Newari dwellings can be adjusted to
+              accommodate different family sizes and requirements. The modular
+              design facilitates sequential expansions or alterations, therefore
+              simplifying the process for families to expand or modify their
+              homes as necessary, without necessitating extensive rebuilding.
             </p>
 
             <h4 class="text-uppercase mb-3 text-primary">
               5. Modern Adaptations and Innovations
             </h4>
             <p>
-              Ancient and Modern: Contemporary architects and engineers in
-              Bhaktapur are combining traditional architectural features with
-              modern building technologies. Novel seismic retrofitting, improved
-              materials, and contemporary engineering methods are being employed
-              to augment the durability of both newly constructed and
-              refurbished buildings.
+              Integrated Modern Technologies: Although firmly grounded in
+              tradition, contemporary Newari homes are progressively integrating
+              sustainable technologies. The integration of solar panels,
+              energy-efficient lighting, and modern waste management systems
+              into conventional designs is augmenting their sustainability.
             </p>
             <p>
-              Sustainability Focus: The implementation of sustainable
-              construction methods, such as the use of environmentally friendly
-              materials and energy-efficient designs, enhances the long-term
-              durability of Bhaktapur's architecture. By implementing these
-              methods, the environmental impact is minimised and the longevity
-              of structures is guaranteed.
-            </p>
-            <p>
-              Traditional structures generally employ earthquake-resistant
-              designs characterised by thick walls, hefty wooden beams, and
-              flexible joinery to improve structural stability. Contemporary
-              architects persist in integrating these ideas in conjunction with
-              advancing earthquake-resistant technologies.
-            </p>
-
-            <h4 class="text-uppercase mb-3 text-primary">
-              6. Lessons Learned and Future Outlook
-            </h4>
-            <p>
-              Drawing lessons from previous earthquakes and other obstacles,
-              Bhaktapur's architecture has developed remarkable resilience. An
-              exemplary model for other places confronting comparable challenges
-              is shown by the city's capacity to adjust and innovate while
-              upholding established practices.
-            </p>
-            <p>
-              Sustained conservation efforts are essential to safeguard and
-              enhance Bhaktapur's architectural legacy, therefore assuring the
-              city's ability to withstand future difficulties. Effective
-              cooperation among local communities, government institutions, and
-              foreign organisations is crucial for preserving the architectural
-              integrity of the city.
+              Green Building Practices: The core concepts of traditional Newari
+              architecture are being incorporated into modern green construction
+              practices. Architectural and construction professionals are
+              deriving inspiration from conventional approaches to create
+              innovative and environmentally-friendly building methods that are
+              in line with contemporary requirements.
             </p>
 
             <h4 class="text-uppercase mb-3 text-primary">Conclusion</h4>
             <p>
-              The architectural durability of Bhaktapur is an impressive
-              illustration of how conventional construction methods, cultural
-              importance, and contemporary advancements may converge to produce
-              edifices that endure the trials of time and geological forces. The
-              city's capacity to maintain its unique architectural legacy while
-              adjusting to modern demands highlights the lasting resilience and
-              aesthetic appeal of its structures. In the ongoing process of
-              recovery and development, the architectural resilience of
-              Bhaktapur stands as a remarkable demonstration of the
-              resourcefulness and determination of its inhabitants.
+              Traditional Newari dwellings exemplify the resourcefulness and
+              durability of traditional architectural methods. The dwellings
+              exemplify a paradigm of environmental and resource efficiency by
+              employing local materials, creating climate-responsive
+              construction, and promoting community integration. In light of the
+              increasing global concerns about sustainability and environmental
+              consequences, the concepts of traditional Newari architecture
+              provide significant insights into the development of buildings
+              that are culturally significant and environmentally conscientious.
+              The adoption of these ideas can effectively direct the evolution
+              of future architecture that pays tribute to historical influences
+              while simultaneously tackling present-day obstacles.
             </p>
           </div>
           <!-- Blog Detail End -->
