--- a/thanks.html
+++ b/thanks.html
@@ -109,8 +109,8 @@
 
 
 <!-- Location Start -->
-<div class="container-fluid bg-light overflow-hidden py-4 px-lg-0">
-    <div class="container py-1 px-lg-0">
+<div class="container-fluid bg-yellow overflow-hidden py-4 px-lg-0">
+    <div class="container py-4 px-lg-0">
       <div class="row g-5">
         <h1 class="display-5 text-uppercase text-center mb-4">
              <span class="text-primary">Thank you so much for filling out the contact info.</span> 
@@ -118,7 +118,7 @@
           <h2 class="display-5 text-uppercase text-center mb-4">We will get back to you in less than 24 hours.</h2>
     
       </div>
-      <div class="text-center mx-auto" style="max-width: 300px">
+      <div class="text-center mx-auto mb-4" style="max-width: 300px">
         <a
           href="index.html"
           class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
